Fixed footer overflow bug.

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -8,7 +8,7 @@ body  {
 
 #wrap {
   min-height: 100%;
-  padding-bottom: 4rem;
+  padding-bottom: 5rem;
 }
 
 /* header */
